--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,14 @@
 {
-  "framework": "nextjs",
-  "buildCommand": "next build",
-  "installCommand": "npm install"
+  "rewrites": [
+    { "source": "/", "destination": "/index.html" },
+    { "source": "/crm", "destination": "/crm/index.html" }
+  ],
+  "redirects": [
+    {
+      "source": "/(.*)",
+      "destination": "https://psicofunnel.online/$1",
+      "permanent": true,
+      "has": [{ "type": "host", "value": "www.psicofunnel.online" }]
+    }
+  ]
 }
