--- a/package.json
+++ b/package.json
@@ -14,7 +14,5 @@
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
-  "engines": {
-    "node": ">=18.17.0"
-  }
+  "engines": { "node": ">=18.17.0" }
 }
