--- a/package.json
+++ b/package.json
@@ -9,12 +9,10 @@
     "vercel-build": "next build"
   },
   "dependencies": {
-    "@vercel/blob": "0.23.4",
     "next": "14.2.5",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "@vercel/blob": "0.23.4"
   },
-  "engines": {
-    "node": ">=18.17.0"
-  }
+  "engines": { "node": ">=18.17.0" }
 }
