--- a/package.json
+++ b/package.json
@@ -7,17 +7,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "vercel-build": "next build"
+    "vercel-build": "next build",
+    "postinstall": "next telemetry disable"
   },
   "dependencies": {
+    "@vercel/blob": "0.24.0",
     "next": "14.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@vercel/blob": "0.24.0"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "typescript": "5.5.4",
+    "@types/node": "20.14.10",
     "@types/react": "18.2.74",
-    "@types/node": "20.14.10"
+    "typescript": "5.5.4"
+  },
+  "optionalDependencies": {
+    "@next/swc-linux-x64-gnu": "14.2.5",
+    "@next/swc-linux-arm64-gnu": "14.2.5",
+    "@next/swc-linux-x64-musl": "14.2.5",
+    "@next/swc-linux-arm64-musl": "14.2.5",
+    "@next/swc-darwin-x64": "14.2.5",
+    "@next/swc-darwin-arm64": "14.2.5",
+    "@next/swc-win32-x64-msvc": "14.2.5"
   }
 }
